--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 # your domain
-domain: example.com
+domain: laughing-goodall-641187.netlify.app
 port:                 # default 12580
 
 # source list file
